--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF S
 DAMAGE.
 " />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>TiddlyWiki — a non-linear personal web notebook</title>
+<title>WhareHauora — affordable WhareSensors to measure the healthiness of our homes.</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 
 </head>
@@ -117,7 +117,32 @@ Error message and password prompt
 <div id="splashArea">
 
 
-<div class=" tc-reveal" hidden="true"></div>
+<p>This <a class="tc-tiddlylink-external" href="http://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
+
+<li>$:/core</li>
+
+<li>$:/DefaultTiddlers</li>
+
+<li>$:/isEncrypted</li>
+
+<li>$:/SiteSubtitle</li>
+
+<li>$:/SiteTitle</li>
+
+<li>$:/state/tab/sidebar--1835078512</li>
+
+<li>$:/StoryList</li>
+
+<li>$:/temp/info-plugin</li>
+
+<li>$:/themes/tiddlywiki/snowwhite</li>
+
+<li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>HomePage</li>
+
+</ul>
+</p>
 
 
 
@@ -7774,8 +7799,37 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20160714021408009" modified="20160714021429009" title="$:/DefaultTiddlers">
+<pre>HomePage</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
+</div>
+<div created="20160714021405412" modified="20160714021405412" title="$:/SiteSubtitle">
+<pre>affordable WhareSensors to measure the healthiness of our homes.</pre>
+</div>
+<div created="20160714021344073" modified="20160714021345697" title="$:/SiteTitle">
+<pre>WhareHauora</pre>
+</div>
+<div created="20160714021440225" modified="20160714021649391" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
+<div list="HomePage" title="$:/StoryList">
+<pre></pre>
+</div>
+<div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
+<pre>{
+    &quot;tiddlers&quot;: {
+        &quot;$:/info/browser&quot;: {
+            &quot;title&quot;: &quot;$:/info/browser&quot;,
+            &quot;text&quot;: &quot;yes&quot;
+        },
+        &quot;$:/info/node&quot;: {
+            &quot;title&quot;: &quot;$:/info/node&quot;,
+            &quot;text&quot;: &quot;no&quot;
+        }
+    }
+}</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.12">
 <pre>{
@@ -7885,6 +7939,17 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20160714021444368" modified="20160714021552376" tags="" title="HomePage">
+<pre>Affordable WhareSensors to measure the healthiness of our homes.
+
+* [[ProjectGoals]]
+* [[Hardware]]
+* [[DeviceSoftware]]
+* [[Infrastructure]]
+* [[AndroidApp]]
+* [[IOSApp]]
+</pre>
 </div>
 
 </div>
