--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Hardware</li>
+
 <li>HomePage</li>
+
+<li>ProjectGoals</li>
 
 </ul>
 </p>
@@ -7814,7 +7818,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714021649391" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage" title="$:/StoryList">
+<div list="HomePage Hardware" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7940,15 +7944,42 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160714021444368" modified="20160714021552376" tags="" title="HomePage">
+<div created="20160714022021830" modified="20160714022413335" title="Hardware">
+<pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
+
+Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors gives an accuracy of +/- 0.1C in the 10C to 30C range. It is less accurate in very cold and very hot environments. The sensor costs about $5 to $10 each, and it the most expensive piece of our device
+
+One node within a mesh will have internet access. For most deploys this is wifi. We use a ESP8266. These cost $6 each.
+
+TODO document: 
+* Transceiver
+* SD card
+
+plus sundry other costs such as resistors, capacitors, power supply, and circuit board printing.
+
+
+</pre>
+</div>
+<div created="20160714021444368" modified="20160714022039108" tags="" title="HomePage">
 <pre>Affordable WhareSensors to measure the healthiness of our homes.
 
 * [[ProjectGoals]]
+* [[MeshNetwork]]
 * [[Hardware]]
 * [[DeviceSoftware]]
 * [[Infrastructure]]
 * [[AndroidApp]]
 * [[IOSApp]]
+</pre>
+</div>
+<div created="20160714021805606" modified="20160714022004794" title="ProjectGoals">
+<pre>By keeping costs low, and using simple hardware, we can afford to place a device in every bedroom and living space. 
+
+We use DIY hobbyist hardware, so volunteers enjoy upskilling while contributing to the project.
+
+Goal is $NZ 20 per device (currently we're at NZ$25).
+
+
 </pre>
 </div>
 
