--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>CaseDesign</li>
+
 <li>Hardware</li>
 
 <li>HomePage</li>
@@ -7815,10 +7817,10 @@ Error message and password prompt
 <div created="20160714021344073" modified="20160714021345697" title="$:/SiteTitle">
 <pre>WhareHauora</pre>
 </div>
-<div created="20160714021440225" modified="20160714021649391" title="$:/state/tab/sidebar--1835078512">
+<div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage Hardware" title="$:/StoryList">
+<div list="HomePage CaseDesign" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7944,6 +7946,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20160714022946204" modified="20160714033706178" title="CaseDesign">
+<pre>[img[Cad screenshot of case|case.jpg]]</pre>
+</div>
 <div created="20160714022021830" modified="20160714022619836" title="Hardware">
 <pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
 
@@ -7962,16 +7967,19 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 * https://www.openhardware.io/user/168#view=projects
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714022039108" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714022828646" tags="" title="HomePage">
 <pre>Affordable WhareSensors to measure the healthiness of our homes.
 
 * [[ProjectGoals]]
 * [[MeshNetwork]]
 * [[Hardware]]
+* [[CaseDesign]]
 * [[DeviceSoftware]]
 * [[Infrastructure]]
 * [[AndroidApp]]
 * [[IOSApp]]
+
+[img[unosensor.jpg]]
 </pre>
 </div>
 <div created="20160714021805606" modified="20160714022004794" title="ProjectGoals">
