--- a/index.html
+++ b/index.html
@@ -7820,7 +7820,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage Hardware" title="$:/StoryList">
+<div list="HomePage" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7967,9 +7967,15 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 * [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714022828646" tags="" title="HomePage">
-<pre>Affordable WhareSensors to measure the healthiness of our homes.
+<div created="20160714021444368" modified="20160714034256614" tags="" title="HomePage">
+<pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
+''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
+''
+
+Whare Haurora sensors are open. All details on hardware and software are released under open licences for anyone to use. We alsomake use of many existing open projects.
+
+!! Details
 * [[ProjectGoals]]
 * [[MeshNetwork]]
 * [[Hardware]]
