more photos of early design

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@ Error message and password prompt
 
 <li>ProjectGoals</li>
 
+<li>WhareSensors</li>
+
 </ul>
 </p>
 
@@ -7967,7 +7969,7 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 * [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714034256614" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714034423866" tags="" title="HomePage">
 <pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
 ''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
@@ -7985,6 +7987,9 @@ Whare Haurora sensors are open. All details on hardware and software are release
 * [[AndroidApp]]
 * [[IOSApp]]
 
+!! See also:
+* [[Whare Hauora on twitter|https://twitter.com/wharehauora]]
+
 [img[unosensor.jpg]]
 </pre>
 </div>
@@ -7996,6 +8001,13 @@ We use DIY hobbyist hardware, so volunteers enjoy upskilling while contributing 
 Goal is $NZ 20 per device (currently we're at NZ$25).
 
 
+</pre>
+</div>
+<div created="20160714034526130" modified="20160714034538627" title="WhareSensors">
+<pre>
+&lt;&lt;&lt;
+whare (noun) house, building, residence, dwelling, shed, hut, habitation, suit (cards).
+&lt;&lt;&lt;
 </pre>
 </div>
 
