--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <li>CaseDesign</li>
 
+<li>EarlyDesign</li>
+
 <li>Hardware</li>
 
 <li>HomePage</li>
@@ -7951,14 +7953,18 @@ Error message and password prompt
 <div created="20160714022946204" modified="20160714033706178" title="CaseDesign">
 <pre>[img[Cad screenshot of case|case.jpg]]</pre>
 </div>
-<div created="20160714022021830" modified="20160714033941360" title="Hardware">
+<div created="20160714035337673" modified="20160714035342904" title="EarlyDesign">
+<pre>[img[earlydesign.jpg]]</pre>
+</div>
+<div created="20160714022021830" modified="20160714035227703" title="Hardware">
 <pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
 
 Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors gives an accuracy of +/- 0.1C in the 10C to 30C range. It is less accurate in very cold and very hot environments. The sensor costs about $5 to $10 each, and it the most expensive piece of our device
 
 One node within a mesh will have internet access. For most deploys this is wifi. We use a ESP8266. These cost $6 each.
 
-TODO document: 
+TODO document:  
+
 * Transceiver
 * SD card
 
@@ -7967,9 +7973,13 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 
 * [[Original hackaday page|https://hackaday.io/project/9803-moulduino-whare-ora-measuring-new-zealands-homes]]
 * [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
+
+
+About $25 of parts will build a sensor node
+[img[parts.jpg]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714034423866" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714035331479" tags="" title="HomePage">
 <pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
 ''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
@@ -7989,6 +7999,7 @@ Whare Haurora sensors are open. All details on hardware and software are release
 
 !! See also:
 * [[Whare Hauora on twitter|https://twitter.com/wharehauora]]
+* [[EarlyDesign]]
 
 [img[unosensor.jpg]]
 </pre>
