Links to device git repos

--- a/index.html
+++ b/index.html
@@ -129,17 +129,29 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab--1963855381</li>
+
+<li>$:/state/tab--2112689675</li>
+
+<li>$:/state/tab--959111941</li>
+
+<li>$:/state/tab-1749438307</li>
+
 <li>$:/state/tab/sidebar--1835078512</li>
 
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/theme</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
 <li>CaseDesign</li>
+
+<li>DeviceSoftware</li>
 
 <li>Hardware</li>
 
@@ -7821,6 +7833,18 @@ Error message and password prompt
 <div created="20160714021344073" modified="20160714021345697" title="$:/SiteTitle">
 <pre>WhareHauora</pre>
 </div>
+<div created="20160714040131218" modified="20160714040131218" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
+</div>
+<div created="20160714040100079" modified="20160714040100079" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
+</div>
+<div created="20160714040105411" modified="20160714040117983" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
+</div>
+<div created="20160714040119621" modified="20160714040119622" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
+</div>
 <div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
@@ -7840,6 +7864,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20160714040124046" modified="20160714040127206" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.12">
 <pre>{
@@ -7952,6 +7979,14 @@ Error message and password prompt
 </div>
 <div created="20160714022946204" modified="20160714033706178" title="CaseDesign">
 <pre>[img[Cad screenshot of case|case.jpg]]</pre>
+</div>
+<div created="20160714040232083" modified="20160714040402853" title="DeviceSoftware">
+<pre>
+
+* RF Mesh network https://github.com/mysensors/MySensors
+* Wifi gateway https://github.com/WhareHauora/wharehauora-wifi-gateway
+* Sensor nodes: https://github.com/WhareHauora/wharehauora-arduino
+* Wifi configuration: https://github.com/Br3nda/WiFiManager</pre>
 </div>
 <div created="20160714022021830" modified="20160714033941360" title="Hardware">
 <pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
