photos of device in case, and pcb prints

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@ Error message and password prompt
 
 <li>$:/state/tab-1749438307</li>
 
+<li>$:/state/tab/moresidebar-401116514</li>
+
 <li>$:/state/tab/sidebar--1835078512</li>
 
 <li>$:/StoryList</li>
@@ -7845,7 +7847,10 @@ Error message and password prompt
 <div created="20160714040119621" modified="20160714040119622" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
+<div created="20160714041251991" modified="20160714041307199" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
+</div>
+<div created="20160714021440225" modified="20160714041321311" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div list="HomePage" title="$:/StoryList">
@@ -8006,7 +8011,7 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 * [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714034423866" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714041330441" tags="" title="HomePage">
 <pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
 ''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
@@ -8028,6 +8033,7 @@ Whare Haurora sensors are open. All details on hardware and software are release
 * [[Whare Hauora on twitter|https://twitter.com/wharehauora]]
 
 [img[unosensor.jpg]]
+[img[casephoto.jpg]]
 </pre>
 </div>
 <div created="20160714035729940" modified="20160714035937875" title="MeshNetwork">
