--- a/index.html
+++ b/index.html
@@ -7853,7 +7853,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714041321311" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage" title="$:/StoryList">
+<div list="HomePage Hardware" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7993,7 +7993,7 @@ Error message and password prompt
 * Sensor nodes: https://github.com/WhareHauora/wharehauora-arduino
 * Wifi configuration: https://github.com/Br3nda/WiFiManager</pre>
 </div>
-<div created="20160714022021830" modified="20160714033941360" title="Hardware">
+<div created="20160714022021830" modified="20160714041419125" title="Hardware">
 <pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
 
 Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors gives an accuracy of +/- 0.1C in the 10C to 30C range. It is less accurate in very cold and very hot environments. The sensor costs about $5 to $10 each, and it the most expensive piece of our device
@@ -8009,6 +8009,8 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 
 * [[Original hackaday page|https://hackaday.io/project/9803-moulduino-whare-ora-measuring-new-zealands-homes]]
 * [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
+
+[img[pcb.jpg]]
 </pre>
 </div>
 <div created="20160714021444368" modified="20160714041330441" tags="" title="HomePage">
