--- a/index.html
+++ b/index.html
@@ -7987,13 +7987,12 @@ Error message and password prompt
 </div>
 <div created="20160714040232083" modified="20160714040402853" title="DeviceSoftware">
 <pre>
-
 * RF Mesh network https://github.com/mysensors/MySensors
 * Wifi gateway https://github.com/WhareHauora/wharehauora-wifi-gateway
 * Sensor nodes: https://github.com/WhareHauora/wharehauora-arduino
 * Wifi configuration: https://github.com/Br3nda/WiFiManager</pre>
 </div>
-<div created="20160714022021830" modified="20160714041419125" title="Hardware">
+<div created="20160714022021830" modified="20160714041904139" title="Hardware">
 <pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
 
 Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors gives an accuracy of +/- 0.1C in the 10C to 30C range. It is less accurate in very cold and very hot environments. The sensor costs about $5 to $10 each, and it the most expensive piece of our device
@@ -8001,6 +8000,7 @@ Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors give
 One node within a mesh will have internet access. For most deploys this is wifi. We use a ESP8266. These cost $6 each.
 
 TODO document: 
+
 * Transceiver
 * SD card
 
@@ -8008,7 +8008,7 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 
 
 * [[Original hackaday page|https://hackaday.io/project/9803-moulduino-whare-ora-measuring-new-zealands-homes]]
-* [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
+* [[Gerber files for printing circuit boards|https://www.openhardware.io/user/168#view=projects]]
 
 [img[pcb.jpg]]
 </pre>
