--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ Error message and password prompt
 
 <li>MeshNetwork</li>
 
+<li>OshPark</li>
+
 <li>ProjectGoals</li>
 
 <li>WhareSensors</li>
@@ -7853,7 +7855,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714041321311" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage Hardware" title="$:/StoryList">
+<div list="HomePage OshPark" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8013,7 +8015,7 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 [img[pcb.jpg]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714041330441" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714042303074" tags="" title="HomePage">
 <pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
 ''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
@@ -8032,6 +8034,7 @@ Whare Haurora sensors are open. All details on hardware and software are release
 * [[IOSApp]]
 
 !! See also:
+* [[OshPark]]
 * [[Whare Hauora on twitter|https://twitter.com/wharehauora]]
 
 [img[unosensor.jpg]]
@@ -8047,6 +8050,10 @@ There is a fork of this in the WhareHauora github organisation. We branch from t
 
 One gateway node has slighly more hardware: Wifi, and an sd card for storage when unable to reach the internet.
 
+</pre>
+</div>
+<div created="20160714042311259" modified="20160714042350265" title="OshPark">
+<pre>OshPark are a pcb printer. They have generously given WhareHauora free printing of circuit boards. Their boards are super pretty purple.
 </pre>
 </div>
 <div created="20160714021805606" modified="20160714022004794" title="ProjectGoals">
