purple board photo

--- a/index.html
+++ b/index.html
@@ -7988,8 +7988,7 @@ Error message and password prompt
 <pre>[img[Cad screenshot of case|case.jpg]]</pre>
 </div>
 <div created="20160714040232083" modified="20160714040402853" title="DeviceSoftware">
-<pre>
-* RF Mesh network https://github.com/mysensors/MySensors
+<pre>* RF Mesh network https://github.com/mysensors/MySensors
 * Wifi gateway https://github.com/WhareHauora/wharehauora-wifi-gateway
 * Sensor nodes: https://github.com/WhareHauora/wharehauora-arduino
 * Wifi configuration: https://github.com/Br3nda/WiFiManager</pre>
@@ -8052,9 +8051,10 @@ One gateway node has slighly more hardware: Wifi, and an sd card for storage whe
 
 </pre>
 </div>
-<div created="20160714042311259" modified="20160714042350265" title="OshPark">
+<div created="20160714042311259" modified="20160714042509107" title="OshPark">
 <pre>OshPark are a pcb printer. They have generously given WhareHauora free printing of circuit boards. Their boards are super pretty purple.
-</pre>
+
+[img[purple.jpg]]</pre>
 </div>
 <div created="20160714021805606" modified="20160714022004794" title="ProjectGoals">
 <pre>By keeping costs low, and using simple hardware, we can afford to place a device in every bedroom and living space. 
