--- a/index.html
+++ b/index.html
@@ -137,8 +137,6 @@ Error message and password prompt
 
 <li>$:/state/tab-1749438307</li>
 
-<li>$:/state/tab/moresidebar-401116514</li>
-
 <li>$:/state/tab/sidebar--1835078512</li>
 
 <li>$:/StoryList</li>
@@ -161,9 +159,9 @@ Error message and password prompt
 
 <li>MeshNetwork</li>
 
-<li>OshPark</li>
-
 <li>ProjectGoals</li>
+
+<li>ProjectManagement</li>
 
 <li>WhareSensors</li>
 
@@ -7849,13 +7847,10 @@ Error message and password prompt
 <div created="20160714040119621" modified="20160714040119622" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20160714041251991" modified="20160714041307199" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
-</div>
-<div created="20160714021440225" modified="20160714041321311" title="$:/state/tab/sidebar--1835078512">
+<div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage OshPark" title="$:/StoryList">
+<div list="HomePage ProjectManagement" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7988,12 +7983,13 @@ Error message and password prompt
 <pre>[img[Cad screenshot of case|case.jpg]]</pre>
 </div>
 <div created="20160714040232083" modified="20160714040402853" title="DeviceSoftware">
-<pre>* RF Mesh network https://github.com/mysensors/MySensors
+<pre>
+* RF Mesh network https://github.com/mysensors/MySensors
 * Wifi gateway https://github.com/WhareHauora/wharehauora-wifi-gateway
 * Sensor nodes: https://github.com/WhareHauora/wharehauora-arduino
 * Wifi configuration: https://github.com/Br3nda/WiFiManager</pre>
 </div>
-<div created="20160714022021830" modified="20160714041904139" title="Hardware">
+<div created="20160714022021830" modified="20160714033941360" title="Hardware">
 <pre>Primary target is Arduino UNO for each room. (there are some protypes on Arduino nano)
 
 Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors gives an accuracy of +/- 0.1C in the 10C to 30C range. It is less accurate in very cold and very hot environments. The sensor costs about $5 to $10 each, and it the most expensive piece of our device
@@ -8001,7 +7997,6 @@ Sensor is a dht22, a hobbyist temperature and humidity sensor. This sensors give
 One node within a mesh will have internet access. For most deploys this is wifi. We use a ESP8266. These cost $6 each.
 
 TODO document: 
-
 * Transceiver
 * SD card
 
@@ -8009,12 +8004,10 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 
 
 * [[Original hackaday page|https://hackaday.io/project/9803-moulduino-whare-ora-measuring-new-zealands-homes]]
-* [[Gerber files for printing circuit boards|https://www.openhardware.io/user/168#view=projects]]
-
-[img[pcb.jpg]]
+* [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714042303074" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714043226771" tags="" title="HomePage">
 <pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
 ''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
@@ -8031,13 +8024,12 @@ Whare Haurora sensors are open. All details on hardware and software are release
 * [[Infrastructure]]
 * [[AndroidApp]]
 * [[IOSApp]]
+* [[ProjectManagement]]
 
 !! See also:
-* [[OshPark]]
 * [[Whare Hauora on twitter|https://twitter.com/wharehauora]]
 
 [img[unosensor.jpg]]
-[img[casephoto.jpg]]
 </pre>
 </div>
 <div created="20160714035729940" modified="20160714035937875" title="MeshNetwork">
@@ -8051,11 +8043,6 @@ One gateway node has slighly more hardware: Wifi, and an sd card for storage whe
 
 </pre>
 </div>
-<div created="20160714042311259" modified="20160714042509107" title="OshPark">
-<pre>OshPark are a pcb printer. They have generously given WhareHauora free printing of circuit boards. Their boards are super pretty purple.
-
-[img[purple.jpg]]</pre>
-</div>
 <div created="20160714021805606" modified="20160714022004794" title="ProjectGoals">
 <pre>By keeping costs low, and using simple hardware, we can afford to place a device in every bedroom and living space. 
 
@@ -8065,6 +8052,9 @@ Goal is $NZ 20 per device (currently we're at NZ$25).
 
 
 </pre>
+</div>
+<div created="20160714043234725" modified="20160714043245710" title="ProjectManagement">
+<pre>Tasks are tracked in [[Pivotal tracker|https://www.pivotaltracker.com/n/projects/1590817]]</pre>
 </div>
 <div created="20160714034526130" modified="20160714034538627" title="WhareSensors">
 <pre>&lt;&lt;&lt;
