--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@ Error message and password prompt
 
 <li>MeshNetwork</li>
 
+<li>OshPark</li>
+
 <li>ProjectGoals</li>
 
 <li>ProjectManagement</li>
@@ -7850,7 +7852,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="HomePage ProjectManagement" title="$:/StoryList">
+<div list="OshPark" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -7983,8 +7985,7 @@ Error message and password prompt
 <pre>[img[Cad screenshot of case|case.jpg]]</pre>
 </div>
 <div created="20160714040232083" modified="20160714040402853" title="DeviceSoftware">
-<pre>
-* RF Mesh network https://github.com/mysensors/MySensors
+<pre>* RF Mesh network https://github.com/mysensors/MySensors
 * Wifi gateway https://github.com/WhareHauora/wharehauora-wifi-gateway
 * Sensor nodes: https://github.com/WhareHauora/wharehauora-arduino
 * Wifi configuration: https://github.com/Br3nda/WiFiManager</pre>
@@ -8042,6 +8043,11 @@ There is a fork of this in the WhareHauora github organisation. We branch from t
 One gateway node has slighly more hardware: Wifi, and an sd card for storage when unable to reach the internet.
 
 </pre>
+</div>
+<div created="20160714063656554" modified="20160714063658249" title="OshPark">
+<pre>OshPark are a pcb printer. They have generously given WhareHauora free printing of circuit boards. Their boards are super pretty purple.
+
+[img[purple.jpg]]</pre>
 </div>
 <div created="20160714021805606" modified="20160714022004794" title="ProjectGoals">
 <pre>By keeping costs low, and using simple hardware, we can afford to place a device in every bedroom and living space. 
