added link to oshpark.com

--- a/index.html
+++ b/index.html
@@ -8044,8 +8044,8 @@ One gateway node has slighly more hardware: Wifi, and an sd card for storage whe
 
 </pre>
 </div>
-<div created="20160714063656554" modified="20160714063658249" title="OshPark">
-<pre>OshPark are a pcb printer. They have generously given WhareHauora free printing of circuit boards. Their boards are super pretty purple.
+<div created="20160714063656554" modified="20160714074932163" title="OshPark">
+<pre>[[OshPark|http://oshpark.com/]] are a pcb printer. They have generously given WhareHauora free printing of circuit boards. Their boards are super pretty purple.
 
 [img[purple.jpg]]</pre>
 </div>
