definition of Whare

--- a/index.html
+++ b/index.html
@@ -7852,7 +7852,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="OshPark" title="$:/StoryList">
+<div list="WhareSensors OshPark" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8062,11 +8062,9 @@ Goal is $NZ 20 per device (currently we're at NZ$25).
 <div created="20160714043234725" modified="20160714043245710" title="ProjectManagement">
 <pre>Tasks are tracked in [[Pivotal tracker|https://www.pivotaltracker.com/n/projects/1590817]]</pre>
 </div>
-<div created="20160714034526130" modified="20160714034538627" title="WhareSensors">
+<div created="20160714034526130" modified="20160714075012358" title="WhareSensors">
 <pre>&lt;&lt;&lt;
-whare (noun) house, building, residence, dwelling, shed, hut, habitation, suit (cards).
-&lt;&lt;&lt;
-</pre>
+whare (noun) house, building, residence, dwelling, shed, hut, habitation.</pre>
 </div>
 
 </div>
