--- a/index.html
+++ b/index.html
@@ -7852,7 +7852,7 @@ Error message and password prompt
 <div created="20160714021440225" modified="20160714022700128" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="WhareSensors OshPark" title="$:/StoryList">
+<div list="HomePage DeviceSoftware OshPark" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8008,13 +8008,30 @@ plus sundry other costs such as resistors, capacitors, power supply, and circuit
 * [[Gerber files for printing circuit boards, at Openhardwas.io|https://www.openhardware.io/user/168#view=projects]]
 </pre>
 </div>
-<div created="20160714021444368" modified="20160714043226771" tags="" title="HomePage">
+<div created="20160714021444368" modified="20160714204334192" tags="" title="HomePage">
 <pre>!! Affordable WhareSensors to measure the healthiness of our homes.
 
 ''This website contains technical details of how to build Whare sensors. For details of the Whare Hauora trust, and sensor network in Wellington, see [[http://www.wharehauora.nz/]]
 ''
 
-Whare Haurora sensors are open. All details on hardware and software are released under open licences for anyone to use. We alsomake use of many existing open projects.
+Whare Haurora sensors are open. All details on hardware and software are released under open licences for anyone to use. We also make use of many existing open projects.
+
+New Zealand's housing is cold, damp, mouldy. Lack of heating and insulation means that homes are ill-equipped to deal with winter temperatures. These poor conditions are linked to increased illnesses and infection. Our homes are making us sick.
+
+To fix a problem (and convince people to fix it) you must first measure it.
+
+These simple sensors will measure the temperature and humidity of a room. To work, they must be
+* 
+* Very low cost
+* Respect the privacy of the occupant
+* Be, look and feel friendly and safe
+
+For a subset of the deployments, they must work:
+
+* without internet
+* without power supply
+
+This is an arduino UNO sheild. It runs on 5V from micro USB (using 2nd hand phone chargers). It can be built in 10 minutes. It currently costs about NZ$20 per unit. 
 
 !! Details
 * [[ProjectGoals]]
